--- a/app/src/main/res/layout/fragment_all_wine.xml
+++ b/app/src/main/res/layout/fragment_all_wine.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.AllWineFragment">
+    tools:context=".ui.main.AllWineFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
