--- a/app/src/main/res/layout/fragment_main_wine.xml
+++ b/app/src/main/res/layout/fragment_main_wine.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/mainbackground"
-    tools:context=".ui.MainWineFragment">
+    tools:context=".ui.main.MainWineFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
