--- a/app/src/main/res/layout/wine_row_layout.xml
+++ b/app/src/main/res/layout/wine_row_layout.xml
@@ -15,12 +15,11 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/row_cardView"
-            android:layout_width="280dp"
-            android:layout_height="400dp"
-            android:layout_marginStart="24dp"
+            android:layout_width="250dp"
+            android:layout_height="450dp"
             android:layout_marginTop="159dp"
             app:cardCornerRadius="20dp"
-            android:backgroundTint="#939292"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -31,13 +30,14 @@
                 <ImageView
                     android:id="@+id/imageView"
                     loadImageUrl="@{result.image}"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="match_parent"
-                    android:scaleType="fitXY"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/ic_launcher_background"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
                     android:id="@+id/textView"
