--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Dessert Wine"
+                android:text="Rose Wine"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
