--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
              xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/splashFragment">
+    app:startDestination="@id/mainFragment">
 
     <fragment
         android:id="@+id/mainWineFragment"
@@ -29,15 +29,6 @@
         android:name="com.ayd.wineapp.ui.main.DetailFragment"
         android:label="fragment_detail"
         tools:layout="@layout/fragment_detail" />
-    <fragment
-        android:id="@+id/splashFragment"
-        android:name="com.ayd.wineapp.ui.splash.SplashFragment"
-        android:label="fragment_splash"
-        tools:layout="@layout/fragment_splash" >
-        <action
-            android:id="@+id/action_splashFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
-    </fragment>
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.ayd.wineapp.ui.main.MainFragment"
