--- a/app/src/main/res/layout/fragment_third_on_board.xml
+++ b/app/src/main/res/layout/fragment_third_on_board.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.onboarding.ThirdOnBoard">
+    tools:context=".ui.onboarding.pages.ThirdOnBoard">
 
     <Button
         android:id="@+id/backtoSecondButton"
