--- a/app/src/main/res/layout/wine_row_layout.xml
+++ b/app/src/main/res/layout/wine_row_layout.xml
@@ -10,6 +10,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/wineRowLayout"
+        onDetailWineClickListener="@{result}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
