--- a/app/src/main/res/layout/fragment_detail_wine.xml
+++ b/app/src/main/res/layout/fragment_detail_wine.xml
@@ -20,10 +20,14 @@
 
     <TextView
         android:id="@+id/textView16"
-        android:layout_width="wrap_content"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="68dp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textSize="24dp"
+        android:textColor="@color/black"
         android:text="detaylarrrrrr"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
