--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,29 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    <group android:scaleX="1.47"
+        android:scaleY="1.47"
+        android:translateX="27.54"
+        android:translateY="27.54">
+        <path
+            android:pathData="M19,20.255S29.042,18.042 29.042,4.25c0,-1.481 -1.167,-2.25 -3.416,-2.25H9.129C8.004,2 5.8,1.738 5.8,4.125c0,13.708 10.2,16.13 10.2,16.13v10.123s-4.584,2.34 -5.498,2.883c-0.984,0.562 -0.33,1.462 0.063,1.617c0.656,0.258 2.253,1.102 6.78,1.102c4.641,0 6.202,-0.914 6.765,-1.102c0.217,-0.072 1.347,-0.932 0.011,-1.723C21.743,31.747 19,30.378 19,30.378V20.255z"
+            android:fillColor="#8899A6"/>
+        <path
+            android:pathData="M29,3.442c0,1.621 -3.547,2.935 -11.623,2.935c-8.076,0 -11.623,-1.314 -11.623,-2.935C5.754,1.82 9.301,0.507 17.377,0.507C25.453,0.507 29,1.821 29,3.442z"
+            android:fillColor="#CCD6DD"/>
+        <path
+            android:pathData="M7.458,3.583c2.042,9.5 5.458,12.792 8.699,13.835c1.11,0.358 2.026,0.428 2.801,0.123c3.5,-1.375 7.542,-5.667 8.167,-13.583c0.161,-2.037 -19.667,-0.375 -19.667,-0.375z"
+            android:fillColor="#CCD6DD"/>
+        <path
+            android:pathData="M9,9.5C9,13 12.333,18 17.333,18S26,12.542 26,9.542c-6,0 -17,-0.042 -17,-0.042z"
+            android:fillColor="#A0041E"/>
+        <path
+            android:pathData="M9,9.5a8.5,1.5 0,1 0,17 0a8.5,1.5 0,1 0,-17 0z"
+            android:fillColor="#DD2E44"/>
+        <path
+            android:pathData="M17.168,6.659c-5.03,0 -8.783,-1.11 -9.801,-1.587a1,1 0,0 1,0.849 -1.811c1.239,0.582 9.455,2.894 18.596,-0.127a1,1 0,1 1,0.626 1.9c-3.676,1.214 -7.209,1.625 -10.27,1.625z"
+            android:fillColor="#FFF"/>
+    </group>
 </vector>
