--- a/app/src/main/res/layout/fragment_detail_wine.xml
+++ b/app/src/main/res/layout/fragment_detail_wine.xml
@@ -22,15 +22,53 @@
         android:id="@+id/textView16"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="68dp"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:textSize="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="Details"
         android:textColor="@color/black"
-        android:text="detaylarrrrrr"
+        android:textSize="24dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Text"
+        android:textSize="18dp"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
+        android:fontFamily="@font/bentham"
+        app:layout_constraintStart_toStartOf="@+id/textView16"
+        app:layout_constraintTop_toBottomOf="@+id/textView16" />
+
+    <ScrollView
+        android:layout_width="209dp"
+        android:layout_height="581dp"
+        android:scrollbars="none"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageView6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView22">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textDetails"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                android:text="dğsadosa*dsadupdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdğsadosa*dsadupısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfısaodupıosaudpıosapodsdfsdfsdfsdfsdfdsfdsfdsfsdfdsfdsfdsfdsfdsdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdfdf"
+                android:textSize="12sp" />
+
+        </LinearLayout>
+    </ScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
