--- a/app/src/main/res/layout/fragment_second_on_board.xml
+++ b/app/src/main/res/layout/fragment_second_on_board.xml
@@ -4,57 +4,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#B6B0D5"
     tools:context=".ui.onboarding.pages.SecondOnBoard">
 
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginBottom="188dp"
+        android:id="@+id/backToFirstButton"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:lottie_autoPlay="true"
+        android:rotationY="180"
         app:lottie_loop="true"
-        app:lottie_rawRes="@raw/red_dot" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="220dp"
-        android:layout_marginBottom="200dp"
-        android:src="@drawable/red_dot"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginBottom="200dp"
-        android:src="@drawable/red_dot"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/backToFirstButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="36dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:lottie_colorFilter="@color/white"
+        app:lottie_rawRes="@raw/right_arrow" />
 
 
-    <Button
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/nextToThirdButton"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_colorFilter="@color/white"
+        app:lottie_rawRes="@raw/right_arrow" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/wine_dog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="36dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginTop="64dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/dog_wine" />
+
+    <TextView
+        android:id="@+id/textView28"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:fontFamily="@font/roboto"
+        android:lineSpacingExtra="4dp"
+        android:text="We’re all about giving you a legendary drinking experience."
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/wine_dog" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
