--- a/app/src/main/res/layout/fragment_third_on_board.xml
+++ b/app/src/main/res/layout/fragment_third_on_board.xml
@@ -4,27 +4,78 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#C5726F"
     tools:context=".ui.onboarding.pages.ThirdOnBoard">
 
-    <Button
+
+
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/backtoSecondButton"
+        android:layout_width="80dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:lottie_autoPlay="true"
+        android:rotationY="180"
+        app:lottie_loop="true"
+        app:lottie_colorFilter="@color/white"
+        app:lottie_rawRes="@raw/right_arrow" />
+
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/finishButton"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="18dp"
+        app:layout_constraintBottom_toBottomOf="@+id/backtoSecondButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/backtoSecondButton"
+        app:lottie_autoPlay="true"
+        app:lottie_colorFilter="@color/white"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/finish_anim" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/wine"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/cheers_wine" />
+
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="96dp"
+        android:fontFamily="@font/roboto"
+        android:lineSpacingExtra="4dp"
+        android:text="You can’t have a proper celebration without wine."
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/finishButton"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="48dp"
+        android:fontFamily="@font/roboto"
+        android:lineSpacingExtra="4dp"
+        android:text="Sip and savor."
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/finishButton"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
