--- a/app/src/main/res/layout/fragment_first_on_board.xml
+++ b/app/src/main/res/layout/fragment_first_on_board.xml
@@ -39,7 +39,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="96dp"
-        android:text="“Wine brings to light the hidden secrets of the soul, gives being to our hopes, bids the coward flight, drives dull care away, and teaches new means for the accomplishment of our wishes.” – Horace"
+        android:text="@string/wine_brings_to_light"
         android:textColor="@color/white"
         android:lineSpacingExtra="4dp"
         android:textSize="18sp"
@@ -55,7 +55,7 @@
         android:layout_marginBottom="48dp"
         android:fontFamily="@font/roboto"
         android:lineSpacingExtra="4dp"
-        android:text="Sophisticated thrill in a bottle."
+        android:text="@string/sophisticated_thrill"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="italic"
