--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Rose Wine"
+                android:text="@string/rose_wine"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -42,8 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="See the Wines"
-
+                android:text="@string/see_the_wines"
                 android:textColor="#D1781C"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -85,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Sparkling Wines"
+                android:text="@string/sparkling_wines"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="20sp"
@@ -97,7 +96,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="See the Wines"
+                android:text="@string/see_the_wines"
                 android:textStyle="bold"
                 android:textColor="#D1781C"
                 app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -139,7 +138,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="White Wines"
+                android:text="@string/white_wines"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="20sp"
@@ -151,7 +150,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="See the Wines"
+                android:text="@string/see_the_wines"
                 android:textStyle="bold"
                 android:textColor="#D1781C"
                 app:layout_constraintStart_toStartOf="@+id/textView6"
@@ -193,7 +192,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="16dp"
-                android:text="Red Wines"
+                android:text="@string/red_wines"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -205,7 +204,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:text="See the Wines"
+                android:text="@string/see_the_wines"
                 android:textColor="#D1781C"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -231,7 +230,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginTop="72dp"
-        android:text="Wine "
+        android:text="@string/wine"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:textSize="36sp"
@@ -242,7 +241,7 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Not?"
+        android:text="@string/not"
         android:textStyle="italic"
         android:textColor="@color/white"
         android:textSize="36sp"
@@ -256,7 +255,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="48dp"
         android:layout_marginTop="12dp"
-        android:text="We offer wine set almost for all the cases of life. Choose yours."
+        android:text="@string/we_offer_wine_set_almost_for_all_the_cases_of_life_choose_yours"
         android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
