--- a/app/src/main/res/layout/fragment_third_on_board.xml
+++ b/app/src/main/res/layout/fragment_third_on_board.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="96dp"
         android:fontFamily="@font/roboto"
         android:lineSpacingExtra="4dp"
-        android:text="You can’t have a proper celebration without wine."
+        android:text="@string/you_can_t_have"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="italic"
@@ -70,7 +70,7 @@
         android:layout_marginBottom="48dp"
         android:fontFamily="@font/roboto"
         android:lineSpacingExtra="4dp"
-        android:text="Sip and savor."
+        android:text="@string/sip_and_savor"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="italic"
