--- a/app/src/main/res/layout/wine_row_layout.xml
+++ b/app/src/main/res/layout/wine_row_layout.xml
@@ -23,6 +23,7 @@
             android:layout_height="450dp"
             android:layout_marginTop="159dp"
             app:cardCornerRadius="20dp"
+            app:cardElevation="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -76,7 +77,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="Location:"
+                    android:text="@string/location"
                     android:textSize="12sp"
                     android:textColor="#757373"
                     app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -99,7 +100,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="Average:"
+                    android:text="@string/average"
                     android:textSize="12sp"
                     android:textColor="#757373"
                     app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -121,7 +122,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:text="Reviews:"
+                    android:text="@string/reviews"
                     android:textSize="12sp"
                     android:textColor="#757373"
                     app:layout_constraintStart_toStartOf="@+id/textView18"
