--- a/app/src/main/res/layout/fragment_detail_wine.xml
+++ b/app/src/main/res/layout/fragment_detail_wine.xml
@@ -68,7 +68,7 @@
                 android:lineSpacingExtra="4sp"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                android:text="Everything seems to be fine, wonderful, balanced after a family weekend. And one day your lovely half suddenly says:"
+                android:text="@string/everything_seems_to"
                 android:textColor="#302626"
                 android:textSize="18sp" />
 
@@ -81,7 +81,7 @@
                 android:paddingStart="12dp"
                 android:paddingTop="4dp"
                 android:paddingEnd="12dp"
-                android:text="“You know, dear! You’re beautiful and perfect, but I’m nasty and not worthy of you. That’s why I’m breaking up with you.”"
+                android:text="@string/you_know_dear"
                 android:textColor="#A66C2A2A"
                 android:textSize="18sp" />
 
@@ -96,8 +96,7 @@
                 android:fontFamily="@font/sevillana"
                 android:textSize="18sp"
                 android:textColor="#302626"
-                android:text="Familiar? So this Pinot for you! Garnet red in colour. A vibrant wine with purity of fruit and great intensity.
-Packed with lively flavors and distinct herbaceous aromas." />
+                android:text="@string/familiar_so_this" />
 
             <TextView
                 android:id="@+id/textView25"
@@ -111,7 +110,7 @@ Packed with lively flavors and distinct herbaceous aromas." />
                 android:lineSpacingExtra="4sp"
                 android:fontFamily="@font/sevillana"
                 android:textSize="18sp"
-                android:text="Is it not enough to forget your ex?" />
+                android:text="@string/is_it_not_enough" />
 
             <TextView
                 android:id="@+id/textView26"
@@ -124,10 +123,7 @@ Packed with lively flavors and distinct herbaceous aromas." />
                 android:lineSpacingExtra="4sp"
                 android:fontFamily="@font/sevillana"
                 android:textSize="18sp"
-                android:text="Hold my glass!
-By tasting this wine you will feel a fragrant dark cherry with delicate violet notes and an elegant seductive texture.
-Raspberry, cherry and plum with subtle oak on the nose. Earthy character, long finish, dry with soft fruit tannins,
-a wine with serious structure and length." />
+                android:text="@string/hold_my_glass" />
 
         </LinearLayout>
     </ScrollView>
