--- a/app/src/main/res/layout/fragment_second_on_board.xml
+++ b/app/src/main/res/layout/fragment_second_on_board.xml
@@ -56,7 +56,7 @@
         android:layout_marginStart="16dp"
         android:fontFamily="@font/roboto"
         android:lineSpacingExtra="4dp"
-        android:text="We’re all about giving you a legendary drinking experience."
+        android:text="@string/we_re_all_about"
         android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="italic"
