--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/mainFragment"
-        android:title="main"
+        android:title="@string/main"
         android:icon="@drawable/wine_icon"/>
 
     <item android:id="@+id/allWineFragment"
-        android:title="search"
+        android:title="@string/search"
         android:icon="@drawable/search_icon"/>
 
     <item android:id="@+id/detailFragment"
-        android:title="detail"
-        android:icon="@drawable/info_icon"/>
+        android:title="@string/detail"
+        android:icon="@drawable/grapes"/>
 
 </menu>
