Added dark mode. Latest ui/ux updates and Application completed.

--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#E83C5E"
-                android:endColor="#FFFFFF"
+                android:startColor="@color/darker_pink"
+                android:endColor="@color/white"
                 android:type="linear"
                 android:angle="90"/>
         </shape>
