--- a/app/src/main/res/drawable/detail_gradient.xml
+++ b/app/src/main/res/drawable/detail_gradient.xml
@@ -3,8 +3,8 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#26A88A"
-                android:endColor="#031926"
+                android:startColor="@color/light_green"
+                android:endColor="@color/system_color"
                 android:type="linear"
                 android:angle="90"/>
         </shape>
