--- a/app/src/main/res/layout/fragment_all_wine.xml
+++ b/app/src/main/res/layout/fragment_all_wine.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#1A2332"
+    android:background="@color/dark_blue"
     tools:context=".ui.main.AllWineFragment">
 
 
@@ -23,7 +23,7 @@
         android:id="@+id/wineSearchView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/white"
+        android:background="@color/white_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
