--- a/app/src/main/res/layout/fragment_detail_wine.xml
+++ b/app/src/main/res/layout/fragment_detail_wine.xml
@@ -69,7 +69,7 @@
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 android:text="@string/everything_seems_to"
-                android:textColor="#302626"
+                android:textColor="@color/dark_brown"
                 android:textSize="18sp" />
 
             <TextView
@@ -82,7 +82,7 @@
                 android:paddingTop="4dp"
                 android:paddingEnd="12dp"
                 android:text="@string/you_know_dear"
-                android:textColor="#A66C2A2A"
+                android:textColor="@color/light_red"
                 android:textSize="18sp" />
 
             <TextView
@@ -95,7 +95,7 @@
                 android:lineSpacingExtra="4sp"
                 android:fontFamily="@font/sevillana"
                 android:textSize="18sp"
-                android:textColor="#302626"
+                android:textColor="@color/dark_brown"
                 android:text="@string/familiar_so_this" />
 
             <TextView
@@ -119,7 +119,7 @@
                 android:paddingTop="4dp"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                android:textColor="#302626"
+                android:textColor="@color/dark_brown"
                 android:lineSpacingExtra="4sp"
                 android:fontFamily="@font/sevillana"
                 android:textSize="18sp"
