--- a/app/src/main/res/layout/fragment_first_on_board.xml
+++ b/app/src/main/res/layout/fragment_first_on_board.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CCB8DD"
+    android:background="@color/sweet_pink"
     tools:context=".ui.onboarding.pages.FirstOnBoard">
 
     <com.airbnb.lottie.LottieAnimationView
