--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@string/see_the_wines"
-                android:textColor="#D1781C"
+                android:textColor="@color/orange"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/textView8"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -98,7 +98,7 @@
                 android:layout_marginTop="12dp"
                 android:text="@string/see_the_wines"
                 android:textStyle="bold"
-                android:textColor="#D1781C"
+                android:textColor="@color/orange"
                 app:layout_constraintStart_toStartOf="@+id/textView7"
                 app:layout_constraintTop_toBottomOf="@+id/textView7" />
             <ImageView
@@ -152,7 +152,7 @@
                 android:layout_marginTop="12dp"
                 android:text="@string/see_the_wines"
                 android:textStyle="bold"
-                android:textColor="#D1781C"
+                android:textColor="@color/orange"
                 app:layout_constraintStart_toStartOf="@+id/textView6"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
             <ImageView
@@ -205,7 +205,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@string/see_the_wines"
-                android:textColor="#D1781C"
+                android:textColor="@color/orange"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/textView5"
                 app:layout_constraintTop_toBottomOf="@+id/textView5" />
