--- a/app/src/main/res/layout/wine_row_layout.xml
+++ b/app/src/main/res/layout/wine_row_layout.xml
@@ -52,7 +52,7 @@
                     android:ellipsize="end"
                     android:maxLines="3"
                     android:text="@{result.wine}"
-                    android:textColor="#D1781C"
+                    android:textColor="@color/orange"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +67,7 @@
                     android:text="@{result.winery}"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="#555353"
+                    android:textColor="@color/darker_gray"
                     android:textAllCaps="true"
                     app:layout_constraintStart_toStartOf="@+id/textView"
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -79,7 +79,7 @@
                     android:layout_marginTop="24dp"
                     android:text="@string/location"
                     android:textSize="12sp"
-                    android:textColor="#757373"
+                    android:textColor="@color/dark_gray"
                     app:layout_constraintStart_toStartOf="@+id/textView2"
                     app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -102,7 +102,7 @@
                     android:layout_marginTop="24dp"
                     android:text="@string/average"
                     android:textSize="12sp"
-                    android:textColor="#757373"
+                    android:textColor="@color/dark_gray"
                     app:layout_constraintStart_toStartOf="@+id/textView4"
                     app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -124,7 +124,7 @@
                     android:layout_marginTop="24dp"
                     android:text="@string/reviews"
                     android:textSize="12sp"
-                    android:textColor="#757373"
+                    android:textColor="@color/dark_gray"
                     app:layout_constraintStart_toStartOf="@+id/textView18"
                     app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
@@ -146,7 +146,7 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginBottom="24dp"
                     android:text="750ML"
-                    android:textColor="#BAB8B8"
+                    android:textColor="@color/light_gray"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
