--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,20 +5,20 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="black">#8A8A8A</color>
+    <color name="white">#2C2B2B</color>
     <color name="dark_blue">#1A2332</color>
-    <color name="dark_brown">#302626</color>
-    <color name="light_red">#A66C2A2A</color>
+    <color name="dark_brown">#B5AFAF</color>
+    <color name="light_red">#A6D51414</color>
     <color name="sweet_pink">#CCB8DD</color>
     <color name="orange">#D1781C</color>
     <color name="light_purple">#B6B0D5</color>
     <color name="dark_pink">#C5726F</color>
     <color name="light_gray">#BAB8B8</color>
-    <color name="dark_gray">#757373</color>
-    <color name="darker_gray">#555353</color>
+    <color name="dark_gray">#141414</color>
+    <color name="darker_gray">#A39F9F</color>
     <color name="darker_pink">#E83C5E</color>
     <color name="system_color">#031926</color>
     <color name="light_green">#26A88A</color>
-    <color name="white_search">#FFFFFFFF</color>
+    <color name="white_search">#595757</color>
 </resources>
